# MCP_langgraph_TIGO

./: .env.example  .gitignore  GOOGLE_DRIVE_SETUP.md  IMPLEMENTATION_SUMMARY.md  OAUTH2_SETUP.md  README.md  README_VLLM.md  credentials.json  example_drive_scan.py  load_drive_documents.py  my_drive_catalog.json  pyproject.toml  run_client.bat  run_streamlit.py  streamlit_app.py  test_google.py  test_qdrant.py  test_vllm_setup.py  vLLM_restart_docker.md
.streamlit/: config.toml
data/: Datos_test_RAG.csv  python_functions.py  sample_document.md
data_loader/: load_data_qdrant.py
scout/: client.py  client_utils.py  graph.py  test_mcp.py  vllm_config.py
scout/my_mcp/: config.py  mcp_config.json  mcp_config_simple.json  mcp_config_template.json
scout/my_mcp/local_servers/: dataflow.py  datasetflow.py  math_mcp.py
tests/: test_service_account.py
