[project]
name = "mcp-TIGO"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "httpx>=0.28.1",
    "ipython>=8.0.0",
    "langchain>=0.3.25",
    "langchain-huggingface>=0.2.0",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-openai>=0.2.8",
    "langgraph>=0.4.3",
    "nest-asyncio>=1.6.0",
    "mcp-server-git>=2025.1.14",
    "mcp[cli]>=1.8.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "openai>=1.0.0",
    "qdrant-client>=1.15.0",    
    "uv>=0.7.3",
    "google-api-python-client>=2.155.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scout"]

[tool.uv.workspace]
members = [
    "projects/test_rag_csv",
    "projects/rag_test_csv",
]
